# djangoProject2

./: db.sqlite3  djangoProject2.md
django-polls/: setup.cfg
django-polls/django_polls.egg-info/: PKG-INFO
django-polls/polls/static/polls/: style.css
djangoProject2/: settings.py
polls/: models.py  tests.py  urls.py  views.py
polls/templates/polls/: detail.html  index.html  results.html
templates/admin/: base_site.html
