[metadata]
name = django-polls
version = 2.1
description = a Django app to conduct web-based polls.
long_description = file: README.rst
url = http://www.example.com/
author = Jared Otieno
author_email = ojared511@gmail.com
license = BSD-3-Clause #Example License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2.5 # Replace 'X.Y' as appropriate
    Intended Audience :: Developers
    License :: OSI approved :: BSD License
    Operating System :: OS independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >=3.2.5